--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1,22 +1,8 @@
-.App {
+ .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+TableCell, label{
+    height: auto;
+    margin: 0 auto;
 }
